src/objects/TR1__Internal_Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Computer_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Computer Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Computer_Type__c</fullName>
        <label>Computer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mac</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Direct_Dial__c</fullName>
        <label>Direct Dial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TR1__Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Division</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Email_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Email_Distribution_Lists__c</fullName>
        <label>Email Distribution Lists</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample List 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Headshot_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headshot Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TR1__Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Office_Phone_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Office Phone Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TR1__Preferred_Office_Phone_Extension__c</fullName>
        <label>Preferred Office Phone Extension</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Primary_Offier__c</fullName>
        <label>Primary Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Tech Configuring</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Talent_Rover_User_Profile_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Talent Rover User Profile Configured</label>
        <type>Checkbox</type>
    </fields>
    <label>Internal Onboarding</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IO-{0000}-{00}</displayFormat>
        <label>Internal Onboarding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>